--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <p>赵奕山-A delvoploer</p>
 
-<p>精选Cydia软件源：<a href="https://zys6913.github.io/cydiarepos.github.io/">点我发车</a></p>
+<p>精选Cydia软件源：<a href="https://zys6913.github.io/cydiarepos/">点我发车</a></p>
 
 <p>浏览器主页:zys837.github.io</p>
 
