--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <p>youtube：zys927281</p>
 
-<p>参与编辑此站(但不可增加广告):<a href="https://github.com/zys6913/zys6913.github.io/edit/main/index.md">编辑</a></p>
+<p>参与编辑此站(但不可增加广告):<a href="https://github.com/zys6913/zys6913.github.io/edit/main/index.html">编辑</a></p>
 
 <h2>我的小图片</h2>
 
