--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
 <h2>iphone小福利</h2>
 
-<p>IOS14.2BETA4：<a href="https://ibeta.me/Install/iOS14db">点我安装</a></p>
+<p>IOS14.2BETA4：<a href="https://ibeta.me/static/configs/iOS_iPadOS_14_Beta_Profile.mobileconfig">点我安装</a></p>
 
-<p>Block OTA Updates：<a href="https://ibeta.me/Install/noota">点我安装</a></p>
+<p>Block OTA Updates：<a href="https://ibeta.me/static/configs/noota.mobileconfig">点我安装</a></p>
 
 <p>翻墙软件：<a href="itms-services://?action=download-manifest&amp;url=https://soft.mxnode.cn/moon.plist">点我安装</a></p>
 
