--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="google-site-verification" content="iZfqwO9Za6rDxU_sxYwgXoZeniXfEbDwAu6ruZlskkE" />
     <title>Example Books - high-quality used books for children</title>
     <meta name="robots" content="noindex,nofollow">
-    
+    <meta property="og:site_name" content="赵奕山的个人主页">
+    <meta name="description" content="赵奕山的主页">
     <h2>这里是赵奕山的个人主页</h2>
 
 <p>赵奕山-A delvoploer</p>
