--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8">
     <meta name="Description" CONTENT="Author: A.N. Author, Illustrator: P. Picture, Category: Books, Price:  £9.24, Length: 784 pages">
     <meta name="google-site-verification" content="iZfqwO9Za6rDxU_sxYwgXoZeniXfEbDwAu6ruZlskkE" />
-    <title>Example Books - high-quality used books for children</title>
+    <title>赵奕山的主页</title>
     <meta name="robots" content="noindex,nofollow">
     <meta property="og:site_name" content="赵奕山的个人主页">
-    <meta name="description" content="赵奕山的主页">
     <h2>这里是赵奕山的个人主页</h2>
 
 <p>赵奕山-A delvoploer</p>
