--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>赵奕山的主页</title>
     <meta name="robots" content="noindex,nofollow">
     <meta property="og:site_name" content="赵奕山的个人主页">
-    <link rel="mask-icon" href="/IMG_0398.GIF?v=1.0.0" color="#222">
+    <link rel="mask-icon" href="/IMG_1826.PNG" color="#222">
     <h2>这里是赵奕山的个人主页</h2>
 
 <p>赵奕山-A delvoploer</p>
