--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    
     <meta name="Description" CONTENT="赵奕山的主页">
     <meta name="google-site-verification" content="iZfqwO9Za6rDxU_sxYwgXoZeniXfEbDwAu6ruZlskkE" />
     <title>赵奕山的主页</title>
     <meta name="robots" content="noindex,nofollow">
     <meta property="og:site_name" content="赵奕山的个人主页">
-    <link rel="mask-icon" href="/IMG_1826.PNG" color="#222">
+    < link rel="shortcut icon" type="/favicon.ico" href="./favicon.ico">
     <h2>这里是赵奕山的个人主页</h2>
 
 <p>赵奕山-A delvoploer</p>
