--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>赵奕山的主页</title>
     <meta name="robots" content="noindex,nofollow">
     <meta property="og:site_name" content="赵奕山的个人主页">
+    <link rel="Shortcut Icon" href="http://cnc.qzonestyle.gtimg.cn/aoi/img/logo/favicon.ico?max_age=31536000" type="image/x-icon" />
+
+
     <h2>这里是赵奕山的个人主页</h2>
 
 <p>赵奕山-A delvoploer</p>
