--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>赵奕山的主页</title>
     <meta name="robots" content="noindex,nofollow">
     <meta property="og:site_name" content="赵奕山的个人主页">
-    <link rel="Shortcut Icon" href="http://cnc.qzonestyle.gtimg.cn/aoi/img/logo/favicon.ico?max_age=31536000" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">  
+
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
 
     <h2>这里是赵奕山的个人主页</h2>
