--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="Description" CONTENT="赵奕山的主页">
     <meta name="google-site-verification" content="iZfqwO9Za6rDxU_sxYwgXoZeniXfEbDwAu6ruZlskkE" />
     <title>赵奕山的主页</title>
