--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="en" class="html-fluid">
 <html>
+  <link rel="shortcut icon" href="/favicon.ico" />
+<link rel="bookmark"href="/favicon.ico" />
   <head>
     <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,11 +12,6 @@
     <title>赵奕山的主页</title>
     <meta name="robots" content="noindex,nofollow">
     <meta property="og:site_name" content="赵奕山的个人主页">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">  
-
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-
-
     <h2>这里是赵奕山的个人主页</h2>
 
 <p>赵奕山-A delvoploer</p>
