--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <!DOCTYPE html>
 <html lang="en" class="html-fluid">
 <html>
-  <link rel="shortcut icon" href="/favicon.ico" />
-<link rel="bookmark"href="/favicon.ico" />
   <head>
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
     <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="Description" CONTENT="赵奕山的主页">
