--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
     <meta charset="utf-8">
-<img src="loading-balls.svg" alt="Loading icon" />
+<img src="Loading.GIF" alt="Loading icon" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="Description" CONTENT="赵奕山的主页">
     <meta name="google-site-verification" content="iZfqwO9Za6rDxU_sxYwgXoZeniXfEbDwAu6ruZlskkE" />
