--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
 <h2>iphone小福利</h2>
 
-<p>IOS14.2BETA4：<a href="https://ibeta.me/static/configs/iOS_iPadOS_14_Beta_Profile.mobileconfig">点我安装</a></p>
+<p>IOS14.2BETA4：<a href="https://zys6913.github.io/files/iOS_iPadOS_14_Beta_Profile.mobileconfig">点我安装</a></p>
 
-<p>Block OTA Updates：<a href="https://ibeta.me/static/configs/noota.mobileconfig">点我安装</a></p>
+<p>Block OTA Updates：<a href="https://zys6913.github.io/files/noota.mobileconfig">点我安装</a></p>
 
-<p>翻墙软件：<a href="itms-services://?action=download-manifest&amp;url=https://soft.mxnode.cn/moon.plist">点我安装</a></p>
+<p>翻墙软件：<a href="itms-services://?action=download-manifest&amp;url=https://zys6913.github.io/files/moon.plist">点我安装</a></p>
 
 <h2>Copyright</h2>
 
