--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <p>youtube：zys927281</p>
 
 <p>参与编辑此站(但不可增加广告):<a href="https://github.com/zys6913/zys6913.github.io/edit/main/index.html">编辑</a></p>
-
+  
 <h2>我的小图片</h2>
 
 <p><a href="https://zys6913.github.io/photos/">发车</a></p>
@@ -51,6 +51,10 @@
 <p>Block OTA Updates：<a href="https://zys6913.github.io/files/noota.mobileconfig">点我安装</a></p>
 
 <p>翻墙软件：<a href="itms-services://?action=download-manifest&amp;url=https://zys6913.github.io/files/moon.plist">点我安装</a></p>
+    
+<p>MAC:<a href="https://zys6913.github.io/files/macOSDeveloperBeta16AccessUtility.dmg">点我安装</a><p>
+    
+<p>苹果所有操作系统固件下载站:<a href="https://ipsw.me">点我前往</a><p>
 
 <h2>Copyright</h2>
 
