--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 <p>MAC:<a href="https://zys6913.github.io/files/macOSDeveloperBeta16AccessUtility.dmg">点我安装</a><p>
     
 <p>watchOS7BETA:<a href="https://zys6913.github.io/files/watchOS_7_Beta_Profilemobileconfig.mobileconfig">点我安装</a><p>
-    
+
+<p>iphoneOS1:<a href="https://zys6913.github.io/files/iPhone1,1_1.0_1A543a_Restore.ipsw">Download</a><p>
+
 <p>苹果所有操作系统固件下载站:<a href="https://ipsw.me">点我前往</a><p>
 
 <h2>Copyright</h2>
