--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <p>苹果所有操作系统固件下载站:<a href="https://ipsw.me">点我前往</a><p>
 
 <h2>实用工具<h2>
-  
-<p>计算器::<a href="https://zys6913.github.io/jsmath">点我前往</a><p>
+ 
+<p>计算器:<a href="https://zys6913.github.io/jsmath">点我前往</a><p>
 
 <h2>Copyright</h2>
 
