--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 <p>watchOS7BETA:<a href="https://zys6913.github.io/files/watchOS_7_Beta_Profilemobileconfig.mobileconfig">点我安装</a><p>
     
 <p>苹果所有操作系统固件下载站:<a href="https://ipsw.me">点我前往</a><p>
+    
+<h2>GAMES<h2>
+  
+<p>Mine Clearance:<a href="https://zys6913.github.io/ltg/">go</a><p>
 
 <h2>实用工具<h2>
  
