--- a/index.html
+++ b/index.html
@@ -75,21 +75,5 @@
 <p><a href="https://zys6913.github.io/zys6913/">GO</a></p>
 
 </body>
-//禁用F12
-window.onkeydown = window.onkeyup = window.onkeypress = function (event) {
-    // 判断是否按下F12，F12键码为123
-    if (event.keyCode == 123) {
-    event.preventDefault(); // 阻止默认事件行为
-    window.event.returnValue = false;
-    }
-}
-var threshold = 160; // 打开控制台的宽或高阈值
-// 每秒检查一次
-var check = setInterval(function() {
-    if (window.outerWidth - window.innerWidth > threshold || 
-        window.outerHeight - window.innerHeight > threshold) {
-        // 如果打开控制台，则刷新页面
-        window.location.reload();
-    }
-}, 1000)
+Do not insert any ads!
 </html>
