Do not insert any ads!

--- a/index.html
+++ b/index.html
@@ -75,5 +75,5 @@
 <p><a href="https://zys6913.github.io/zys6913/">GO</a></p>
 
 </body>
-Do not insert any ads!
+<p>Do not insert any ads!<p>
 </html>
