--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <h2>iphone小福利</h2>
 
-<p>IOS14.2BETA4：<a href="https://zys6913.github.io/files/iOS_iPadOS_14_Beta_Profile.mobileconfig">点我安装</a></p>
+<p>IOS14.2RC：<a href="https://zys6913.github.io/files/iOS_iPadOS_14_Beta_Profile.mobileconfig">点我安装</a></p>
 
 <p>Block OTA Updates：<a href="https://zys6913.github.io/files/noota.mobileconfig">点我安装</a></p>
 
