--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
 
 </body>
 <h2>———————————————————-—————<h2>
-<p>Do not insert any ads!<p>
-		<title>warning</title>
+		<title></title>
 		<style type="text/css">
 			body{
 				margin: 0px;
@@ -116,11 +115,12 @@
 		</style>
 	</head>
 	<body>
-		<button type="button" onclick="dianwo()">点我</button>
+		<button type="button" onclick="dianwo()">hit me</button>
 		<div class="zhezhao" id='zhezhao'>
 			<div class="tankuang">
 				<div id="header">
-					<span>我是弹窗</span>
+					<span>warning
+					Do not insert any ads!</span>
 					<div id="header-right" onclick="hidder()">x</div>
 				</div>
 			</div>
