--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 <p>youtube：zys927281</p>
 
 <p>参与编辑此站(但不可增加广告):<a href="https://github.com/zys6913/zys6913.github.io/edit/main/index.html">编辑</a></p>
+	  
+<h2>我的计划</h2>
+	  
+	  <p>cydia repo</p>
+	  <p>网址：zys6913.github.io/repo</p>
+	  <p>jailbreakme：zys6913.github.io/jailbreakme-/</p>
   
 <h2>我的小图片</h2>
 
