--- a/index.html
+++ b/index.html
@@ -5,21 +5,16 @@
   <head>
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
     <meta charset="utf-8">
-<img src="Loading.GIF" alt="Loading icon" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="Description" CONTENT="赵奕山的主页">
     <meta name="google-site-verification" content="iZfqwO9Za6rDxU_sxYwgXoZeniXfEbDwAu6ruZlskkE" />
     <title>赵奕山的主页</title>
     <meta name="robots" content="noindex,nofollow">
     <meta property="og:site_name" content="赵奕山的个人主页">
-    <h2>这里是赵奕山的个人主页</h2>
-
-<p>赵奕山-A delvoploer</p>
-	 
 <BODY bgcolor="#fef4d2" >
 <br><br>
 <center>
-<font color="ffaafa"><h2>website timer</h2></font>
+<font color="ffaafa"><h2>这里是赵奕山的个人主页</h2></font>
 <hr width=300>
 <br><br>
 <script language=JavaScript>
@@ -39,6 +34,8 @@ TotalDate=(Math.round((Date.parse(Nowstring)-Date.parse(Paststring))/(24*3600000
 document.write("zys6913'swebsite（zys6913.github.io）自2020年8月20日建站，至今已运行 "+TotalDate+" 天了。")
 }
 </script>
+
+<p>赵奕山-A delvoploer</p>
 
 <p>精选Cydia软件源：<a href="https://zys6913.github.io/cydiarepos/">点我发车</a></p>
     
