--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <html>
   <head>
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+<script type="text/JavaScript">
+if(navigator.userAgent.indexOf("360SE")>0){
+    alert('系统检测出来你使用了360流氓浏览器,请先卸载或改用ie（或firefox）等再行访问本站，谢谢合作！');
+    document.execCommand("stop");
+    location.href=http://zys6913.github.io/errorpage/
+}
+</script>
     <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="Description" CONTENT="赵奕山的主页">
