--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
 <script type="text/JavaScript">
 if(navigator.userAgent.indexOf("360SE")>0){
-    alert('系统检测出来你使用了360流氓浏览器,请先卸载或改用ie（或firefox）等再行访问本站，谢谢合作！');
+    alert('系统检测出来你使用了360流氓浏览器/chrome,请先卸载或改用ie（或firefox）等再行访问本站，谢谢合作！');
+    document.execCommand("stop");
+    location.href=http://zys6913.github.io/errorpage/
+}
+</script>
+<script type="text/JavaScript">
+if(navigator.userAgent.indexOf("cnromeium")>0){
+    alert('系统检测出来你使用了360流氓浏览器/chrome,请先卸载或改用ie（或firefox）等再行访问本站，谢谢合作！');
     document.execCommand("stop");
     location.href=http://zys6913.github.io/errorpage/
 }
