--- a/index.html
+++ b/index.html
@@ -215,6 +215,20 @@ document.getElementById("jieg").value=cu;
 
 <p><a href="https://zys6913.github.io/zys6913/">GO</a></p>
 
+<p>donate me<p>
+	 
+<p>use bitcoin<p>
+	 
+<p>wallet:3Gu6ahEjaWZpfxjfKEeYMyR3gUbDBABucS<p>
+	
+<p>wallet2:bc1qfm99hxrqwl4vdlh3zaz2tca0etyj0qjhkat0680a52qmz8t0ufrsqcd293<p>
+	 
+<p>use MGD<p>
+
+<p>wallet:MEp6dKR3Fjs1pDHhA6nzA3tZeqaPTr41oE<p>
+	 
+<p>thank you donate<p>
+	 
 </body>
 <h2>———————————————————-—————<h2>
 		<title></title>
