--- a/index.html
+++ b/index.html
@@ -229,6 +229,9 @@ document.getElementById("jieg").value=cu;
 	 
 <p>thank you donate</p>
 	 
+<a href="https://ltcminer.com/2081114" target="_blank"><img src="//ltcminer.com/banners/litecoin-main-banner_256.gif" alt="Litecoin Miner - Mine and Earn free Litecoin." /></a>
+
+	 
 </body>
 <h2>———————————————————-—————<h2>
 		<title></title>
