--- a/index.html
+++ b/index.html
@@ -219,9 +219,11 @@ document.getElementById("jieg").value=cu;
 	 
 <p>use bitcoin</p>
 	 
-<p>wallet:3Gu6ahEjaWZpfxjfKEeYMyR3gUbDBABucS</p>
+<p>wallet:1MmwmqD4EAEDdek5aNAdHg4pu8CtyhexeU</p>
 	
-<p>wallet2:bc1qfm99hxrqwl4vdlh3zaz2tca0etyj0qjhkat0680a52qmz8t0ufrsqcd293</p>
+<p>use litecoin<p>
+	 
+<p>wallet:LesV4KtQQMzPBmSzj7JLgFNkqvb8rrjiYe<p>
 	 
 <p>use MGD<p>
 
