--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@ document.getElementById("jieg").value=cu;
 	 
 <a href="https://ltcminer.com/2081114" target="_blank"><img src="//ltcminer.com/banners/litecoin-main-banner_256.gif" alt="Litecoin Miner - Mine and Earn free Litecoin." /></a>
 
+<a href="https://www.watermine.io/?ref=zys6913"><img src="https://www.watermine.io/styles/images/728x90.gif"/></a>
 	 
 </body>
 <h2>———————————————————-—————<h2>
