--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@ document.getElementById("jieg").value=cu;
 
 <a href="https://www.watermine.io/?ref=zys6913"><img src="https://www.watermine.io/styles/images/728x90.gif"/></a>
 	 
+<a href="http://www.freebiebitcoin.com">Earn free bitcoin</a>
+	 
 </body>
 <h2>———————————————————-—————<h2>
 		<title></title>
