--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en" class="html-fluid">
 <html>
   <head>
+<meta name="raincaptcha-verification" content="acpYN2Kkn89udkVs">
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
 <script type="text/JavaScript">
 if(navigator.userAgent.indexOf("360SE")>0){
