Update and rename index.html to 索引.html

--- a/索引.html
+++ b/索引.html
@@ -215,22 +215,6 @@ document.getElementById("jieg").value=cu;
 <h2>about PAGE</h2>
 
 <p><a href="https://zys6913.github.io/zys6913/">GO</a></p>
-
-<p>donate me</p>
-	 
-<p>use bitcoin</p>
-	 
-<p>wallet:1MmwmqD4EAEDdek5aNAdHg4pu8CtyhexeU</p>
-	
-<p>use litecoin<p>
-	 
-<p>wallet:LesV4KtQQMzPBmSzj7JLgFNkqvb8rrjiYe<p>
-	 
-<p>use MGD<p>
-
-<p>wallet:MEp6dKR3Fjs1pDHhA6nzA3tZeqaPTr41oE</p>
-	 
-<p>thank you donate</p>
 	 
 <a href="https://ltcminer.com/2081114" target="_blank"><img src="//ltcminer.com/banners/litecoin-main-banner_256.gif" alt="Litecoin Miner - Mine and Earn free Litecoin." /></a>
 
@@ -240,6 +224,13 @@ document.getElementById("jieg").value=cu;
 	 
 </body>
 <h2>———————————————————-—————<h2>
+
+<!-- an html -->
+<script src="https://raincaptcha.com/base.js" type="application/javascript"></script>
+<!-- an html form begin -->
+<div id="rain-captcha" data-key="YOUR_PUBLIC_KEY"></div>
+<!-- an html form end -->
+
 		<title></title>
 		<style type="text/css">
 			body{
@@ -283,8 +274,18 @@ document.getElementById("jieg").value=cu;
 		<div class="zhezhao" id='zhezhao'>
 			<div class="tankuang">
 				<div id="header">
-					<span>warning
-					Do not insert any ads!</span>
+					<span>
+>>>donate
+
+>>>use bitcoin
+
+>>>wallet:1MmwmqD4EAEDdek5aNAdHg4pu8CtyhexeU
+
+>>>use litecoin
+
+>>>wallet:LesV4KtQQMzPBmSzj7JLgFNkqvb8rrjiYe
+
+					</span>
 					<div id="header-right" onclick="hidder()">x</div>
 				</div>
 			</div>
@@ -298,7 +299,20 @@ document.getElementById("jieg").value=cu;
 				document.getElementById('zhezhao').style.display="none";
 			}
 		</script>
-	
+
+//...
+
+$client = new \SoapClient('https://raincaptcha.com/captcha.wsdl');
+$response = $client->send('YOUR_SECRET_KEY', $_POST['rain-captcha-response'], $_SERVER['REMOTE_ADDR']);
+
+if ($response->status === 1) {
+    // success
+} else {
+    // failed
+}
+
+//...
+
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
