--- a/index.html
+++ b/index.html
@@ -224,7 +224,22 @@ document.getElementById("jieg").value=cu;
 	 
 </body>
 <h2>———————————————————-—————<h2>
-	
+
+<html>
+  <head>
+    <title>hCaptcha Demo</title>
+    <script src="https://hcaptcha.com/1/api.js" async defer></script>
+  </head>
+  <body>
+    <form action="" method="POST">
+      <input type="text" name="email" placeholder="Email" />
+      <input type="password" name="password" placeholder="Password" />
+      <div class="h-captcha" data-sitekey="33f7d299-77b6-4d91-abea-fc8e0e804ed4"></div>
+      <br />
+      <input type="submit" value="Submit" />
+    </form>
+  </body>
+</html>
 		<title></title>
 		<style type="text/css">
 			body{
