--- a/index.html
+++ b/index.html
@@ -240,6 +240,16 @@ document.getElementById("jieg").value=cu;
     </form>
   </body>
 </html>
+ <script src="https://www.google.com/recaptcha/api.js"></script>
+ <script>
+   function onSubmit(token) {
+     document.getElementById("demo-form").submit();
+   }
+ </script>
+<button class="g-recaptcha" 
+        data-sitekey="reCAPTCHA_site_key" 
+        data-callback='onSubmit' 
+        data-action='submit'>Submit</button>
 		<title></title>
 		<style type="text/css">
 			body{
