--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ document.getElementById("jieg").value=cu;
    }
  </script>
 <button class="g-recaptcha" 
-        data-sitekey="reCAPTCHA_site_key" 
+        data-sitekey="6LeX1EQaAAAAAEJocP_8vKK66d3v9lMzSX_x-vtN" 
         data-callback='onSubmit' 
         data-action='submit'>Submit</button>
 		<title></title>
