--- a/index.html
+++ b/index.html
@@ -249,16 +249,7 @@ document.getElementById("jieg").value=cu;
 <button class="g-recaptcha" 
         data-sitekey="6LeX1EQaAAAAAEJocP_8vKK66d3v9lMzSX_x-vtN" 
         data-callback='onSubmit' 
-        data-action='submit'>Submit</button>
-<div id="robot"></div>
-grecaptcha.render('robot', {
-    'sitekey': '6LeX1EQaAAAAAEJocP_8vKK66d3v9lMzSX_x-vtN', //公钥
-    'theme': 'light', //主题颜色，有light与dark两个值可选
-    'size': 'compact',//尺寸规则，有normal与compact两个值可选
-    'callback': callback, //验证成功回调
-    'expired-callback': expiredCallback, //验证过期回调
-    'error-callback': errorCallback //验证错误回调
-});
+        data-action='submit'>try</button>
 		<title></title>
 		<style type="text/css">
 			body{
