--- a/index.html
+++ b/index.html
@@ -5,27 +5,6 @@
   <head>
 <meta name="raincaptcha-verification" content="acpYN2Kkn89udkVs">
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
-<script type="text/JavaScript">
-if(navigator.userAgent.indexOf("360SE")>0){
-    alert('系统检测出来你使用了360流氓浏览器/ie/chrome,请先卸载或改用firefox等再行访问本站，谢谢合作！');
-    document.execCommand("stop");
-    location.href=http://zys6913.github.io/errorpage/
-}
-</script>
-<script type="text/JavaScript">
-if(navigator.userAgent.indexOf("ie")>0){
-    alert('系统检测出来你使用了360流氓浏览器/ie/chrome,请先卸载或改用firefox等再行访问本站，谢谢合作！');
-    document.execCommand("stop");
-    location.href=http://zys6913.github.io/errorpage/
-}
-</script>
-<script type="text/JavaScript">
-if(navigator.userAgent.indexOf("chrome")>0){
-    alert('系统检测出来你使用了360流氓浏览器/ie/chrome,请先卸载或改用firefox等再行访问本站，谢谢合作！');
-    document.execCommand("stop");
-    location.href=http://zys6913.github.io/errorpage/
-}
-</script>
     <meta charset="utf-8">
     <meta name="Description" CONTENT="赵奕山的主页">
     <meta name="google-site-verification" content="iZfqwO9Za6rDxU_sxYwgXoZeniXfEbDwAu6ruZlskkE" />
@@ -249,7 +228,7 @@ document.getElementById("jieg").value=cu;
 <button class="g-recaptcha" 
         data-sitekey="6LeX1EQaAAAAAEJocP_8vKK66d3v9lMzSX_x-vtN" 
         data-callback='onSubmit' 
-        data-action='submit'>try</button>
+        data-action='submit'>zys6913.github.io/donate</a>
 		<title></title>
 		<style type="text/css">
 			body{
