--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ document.getElementById("jieg").value=cu;
 <button class="g-recaptcha" 
         data-sitekey="6LeX1EQaAAAAAEJocP_8vKK66d3v9lMzSX_x-vtN" 
         data-callback='onSubmit' 
-        data-action='submit'>zys6913.github.io/donate</a>
+        data-action='submit'> href="zys6913.github.io/donate"</a>
 		<title></title>
 		<style type="text/css">
 			body{
