--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ document.getElementById("jieg").value=cu;
 <button class="g-recaptcha" 
         data-sitekey="6LeX1EQaAAAAAEJocP_8vKK66d3v9lMzSX_x-vtN" 
         data-callback='onSubmit' 
-        data-action='submit'>submit</a>
+        data-action='submit'><a href="https://www.watermine.io/?ref=zys6913"><img src="https://www.watermine.io/styles/images/728x90.gif"/></a>
 		<title></title>
 		<style type="text/css">
 			body{
