--- a/index.html
+++ b/index.html
@@ -264,7 +264,10 @@ document.getElementById("jieg").value=cu;
 		</style>
 	</head>
 	<body>
-		<button type="button" onclick="dianwo()">hit me</button>
+		<button class="g-recaptcha"
+			data-sitekey="6LeX1EQaAAAAAEJocP_8vKK66d3v9lMzSX_x-vtN"
+			data-callback='onSubmit'
+			data-action='submit' type="button" onclick="dianwo()">hit me</button>
 		<div class="zhezhao" id='zhezhao'>
 			<div class="tankuang">
 				<div id="header">
