--- a/index.html
+++ b/index.html
@@ -260,15 +260,17 @@ document.getElementById("jieg").value=cu;
 		</style>
 	</head>
 	<body>
+
 	 <script>
    function onSubmit(token) {
      document.getElementById("demo-form").submit();
    }
  </script>
+
 		<button class="g-recaptcha"
 			data-sitekey="6LeX1EQaAAAAAEJocP_8vKK66d3v9lMzSX_x-vtN"
 			data-callback='onSubmit'
-			data-action='submit' type="button" onclick="dianwo()">hit me</button>
+			type="button" onclick="dianwo()" data-action='submit'>hit me</button>
 		<div class="zhezhao" id='zhezhao'>
 			<div class="tankuang">
 				<div id="header">
