--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ document.getElementById("jieg").value=cu;
     </form>
   </body>
 </html>
- <script src="https://www.recaptcha.net/recaptcha/api.js"></script>
+ <script src="https://recaptcha.net/recaptcha/api.js"></script>
 
 		<title></title>
 		<style type="text/css">
