--- a/index.html
+++ b/index.html
@@ -81,8 +81,6 @@ document.write("zys6913'swebsite（zys6913.github.io）自2020年8月20日建站
 <p>IOS14.2RC：<a href="https://zys6913.github.io/files/iOS_iPadOS_14_Beta_Profile.mobileconfig">点我安装</a></p>
 
 <p>Block OTA Updates：<a href="https://zys6913.github.io/files/noota.mobileconfig">点我安装</a></p>
-
-<p>翻墙软件：<a href="itms-services://?action=download-manifest&amp;url=https://zys6913.github.io/files/moon.plist">点我安装</a></p>
     
 <p>MAC:<a href="https://zys6913.github.io/files/macOSDeveloperBeta16AccessUtility.dmg">点我安装</a><p>
     
@@ -195,10 +193,6 @@ document.getElementById("jieg").value=cu;
 <p><a href="https://zys6913.github.io/zys6913/">GO</a></p>
 	 
 <a href="https://ltcminer.com/2081114" target="_blank"><img src="//ltcminer.com/banners/litecoin-main-banner_256.gif" alt="Litecoin Miner - Mine and Earn free Litecoin." /></a>
-
-<a href="https://www.watermine.io/?ref=zys6913"><img src="https://www.watermine.io/styles/images/728x90.gif"/></a>
-	 
-<a href="http://www.freebiebitcoin.com">Earn free bitcoin</a>
 	 
 </body>
 <h2>———————————————————-—————<h2>
@@ -265,11 +259,8 @@ document.getElementById("jieg").value=cu;
      document.getElementById("demo-form").submit();
    }
  </script>
-
-		<button class="g-recaptcha"
-			data-sitekey="6LeX1EQaAAAAAEJocP_8vKK66d3v9lMzSX_x-vtN"
-			data-callback='onSubmit'
-			type="button" onclick="dianwo()" data-action='submit'>hit me</button>
+		
+			type="button" onclick="dianwo()">hit me</button>
 		<div class="zhezhao" id='zhezhao'>
 			<div class="tankuang">
 				<div id="header">
