--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ document.write("zys6913'swebsite（zys6913.github.io）自2020年8月20日建站
 
 <p>knxnskx@yeah.net</p>
 
-<h2>iphone小福利</h2>
+<h2>apple place</h2>
 
 <p>IOS14.2RC：<a href="https://zys6913.github.io/files/iOS_iPadOS_14_Beta_Profile.mobileconfig">点我安装</a></p>
 
