--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ document.getElementById("jieg").value=cu;
    }
  </script>
 		<button class="g-recaptcha"
-                        data-sitekey="reCAPTCHA_site_key" 
+                        data-sitekey="6LeX1EQaAAAAAEJocP_8vKK66d3v9lMzSX_x-vtN" 
                         data-callback='onSubmit' 
 			type="button" data-action='submit' onclick="dianwo()">hit me</button>
 		<div class="zhezhao" id='zhezhao'>
