--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ document.getElementById("jieg").value=cu;
     </form>
   </body>
 </html>
- <script src="https://recaptcha.net/recaptcha/api.js"></script>
+ <script src="https://www.google.com/recaptcha/api.js"></script>
 
 		<title></title>
 		<style type="text/css">
