--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
 
 <p>参与编辑此站(但不可增加广告):<a href="https://github.com/zys6913/zys6913.github.io/edit/main/index.html">编辑</a></p>
 	  
-<h2>我的计划</h2>
+<h2>Projects</h2>
 	  
 	  <p>cydia repo</p>
 	  <p>网址：zys6913.github.io/repo</p>
 	  <p>jailbreakme：zys6913.github.io/jailbreakme-/</p>
+	  <p>The WinHelper:zys6913.github.io/winhelper/</p>
   
 <h2>我的小图片</h2>
 
