--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="Description" CONTENT="赵奕山的主页">
     <meta name="google-site-verification" content="iZfqwO9Za6rDxU_sxYwgXoZeniXfEbDwAu6ruZlskkE" />
     <title>赵奕山的主页</title>
-    <meta name="robots" content="noindex,nofollow">
+    <meta name="robots" content="nofollow">
     <meta property="og:site_name" content="赵奕山的个人主页">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Pragma" contect="no-cache">
@@ -34,10 +34,7 @@
 <h2>Projects</h2>
 	  
 	  <p>cydia repo</p>
-	  <p>网址：zys6913.github.io/repo</p>
-	  <p>jailbreakme：zys6913.github.io/jailbreakme-/</p>
-	  <p>The WinHelper:zys6913.github.io/winhelper/</p>
-  
+	  <p>网址：zys6913.github.io/repo</p>  
 <h2>我的小图片</h2>
 
 <p><a href="https://zys6913.github.io/photos/">发车</a></p>
